added fetch dependency

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.2"
+    "react-scripts": "3.4.2",
+    "node-fetch": "^2.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "node-fetch": "^2.6.0"
   }
 }
