--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,7 @@ functions = "functions"
 
 [build.environment]
 AWS_LAMBDA_JS_RUNTIME = "nodejs12.x"
+
+[build.processing]
+html = { pretty_urls = true }
+images = { compress = true }
