--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "@testing-library/user-event": "^7.1.2",
     "discord-oauth2": "^2.3.0",
     "dotenv": "^8.2.0",
+    "netlify-lambda": "^2.0.1",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.2",
-    "node-fetch": "^2.6.0"
+    "react-scripts": "3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "functions:dev": "netlify-lambda serve functions/src"
   },
   "eslintConfig": {
     "extends": "react-app"
