Updated App settings

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.2"
   },
@@ -20,8 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "functions:dev": "netlify-lambda serve functions/src"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,7 +40,6 @@
   },
   "devDependencies": {
     "axios": "^0.19.2",
-    "jsonwebtoken": "^8.5.1",
-    "node-fetch": "^2.6.0"
+    "jsonwebtoken": "^8.5.1"
   }
 }
