Slight re-design to page layout

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@mdi/js": "^5.5.55",
+    "@mdi/react": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -21,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:lambda": "netlify-lambda serve functions"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,5 +44,6 @@
   "devDependencies": {
     "axios": "^0.19.2",
     "jsonwebtoken": "^8.5.1"
-  }
+  },
+  "proxy": "http://localhost:9000/"
 }
