--- a/netlify.toml
+++ b/netlify.toml
@@ -22,3 +22,4 @@ REACT_APP_GUILD_ID="The Guild ID you're running this page for"
 REACT_APP_JWT_SECRET="Generate a long password (you dont need to remember this)"
 REACT_APP_SKIP_BAN_CHECK="Set to \"true\" to disable spam protection (Optional)"
 REACT_APP_BANNER_URL="The image URL you want to use for a custom banner (Optional)"
+#End of file
