Updated redirects in netlify.toml to handle api requests with better rewrite

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,6 +13,12 @@ from = "/*"
 to = "/index.html"
 status = 200
 
+[[redirects]]
+from = "/api/*"
+to = "/.netlify/functions/:splat"
+status = 200
+
+
 [template.environment]
 REACT_APP_CLIENT_ID= "Your Discord Application Client ID"
 REACT_APP_CLIENT_SECRET= "Your Discord Application Client Secret"
