--- a/netlify.toml
+++ b/netlify.toml
@@ -18,7 +18,6 @@ status = 200
 [template.environment]
 REACT_APP_CLIENT_ID= "Your Discord Application Client ID"
 REACT_APP_CLIENT_SECRET= "Your Discord Application Client Secret"
-REACT_APP_WEBHOOK_URL= "Webhook you created for a #ban-appeals channel in your server"
 REACT_APP_DISCORD_BOT_TOKEN="Your Discord Application Bot Token"
 REACT_APP_GUILD_ID="The Guild ID you're running this page for"
 REACT_APP_JWT_SECRET="Generate a long password (you dont need to remember this)"
@@ -26,4 +25,8 @@ REACT_APP_SKIP_BAN_CHECK="Set to \"true\" to disable spam protection (Optional)"
 REACT_APP_BANNER_URL="The image URL you want to use for a custom banner (Optional)"
 REACT_APP_SITE_TITLE="SEO title you want to use for your website"
 REACT_APP_SITE_DESCRIPTION="SEO Description for your site"
+APPEALS_CHANNEL="The id of the channel where you want appeals to appear"
+REACT_APP_ENABLE_HCAPTCHA="Do you want to use hCaptcha? (true|false)"
+REACT_APP_HCAPTCHA_SITE_KEY="Site Key provided by hCaptcha"
+REACT_APP_HCAPTCHA_SECRET_KEY="Your hCaptcha profile secret"
 #End of file
