--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^0.3.7",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -13,7 +14,6 @@
     "@testing-library/user-event": "^7.1.2",
     "discord-oauth2": "^2.3.0",
     "dotenv": "^8.2.0",
-    "netlify-cli": "^6.8.1",
     "netlify-lambda": "^2.0.1",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
