--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mdi/js": "^5.5.55",
     "@mdi/react": "^1.4.0",
+    "@sendgrid/mail": "^7.6.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "discord-oauth2": "^2.3.0",
     "dotenv": "^8.2.0",
+    "history": "^5.0.1",
     "netlify-lambda": "^2.0.1",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.2"
