--- a/netlify.toml
+++ b/netlify.toml
@@ -21,7 +21,7 @@ REACT_APP_CLIENT_SECRET= "Your Discord Application Client Secret"
 REACT_APP_DISCORD_BOT_TOKEN="Your Discord Application Bot Token"
 REACT_APP_GUILD_ID="The Guild ID you're running this page for"
 REACT_APP_JWT_SECRET="Generate a long password (you dont need to remember this)"
-REACT_APP_SKIP_BAN_CHECK="Set to \"true\" to disable spam protection (Optional)"
+REACT_APP_SKIP_BAN_CHECK="Allow non-banned members to submit an appeal? (true/false)"
 REACT_APP_BANNER_URL="The image URL you want to use for a custom banner (Optional)"
 REACT_APP_SITE_TITLE="SEO title you want to use for your website"
 REACT_APP_SITE_DESCRIPTION="SEO Description for your site"
